jan commits -- announcement

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <title>Srishti Palani -- Human Computer Interaction Researcher</title>
+    <title>Srishti Palani, Human-AI Interaction Researcher</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this website.</noscript>
     <div id="root"></div>
   </body>
 </html>
